--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,29 @@
 <h1>Update Pet</h1>
 
+<form action="/pets/<%=@pet.id%>" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <label>Name:</label>
 
+  <br>
+
+  <input type="text" name="pet[name]" id="pet_name" value="<%=@pet.name%>">
+
+  <br>
+
+  <label>Choose an existing Owner:</label>
+
+  <br>
+
+  <%@owners.each do |owner|%>
+    <input type="checkbox" name="owner.name" id="<%= owner.id%>" value="<%=owner.id%>" <%='checked' if @owner.pets.include?(pet) %>><%=owner.name%></input>
+  <%end%>
+
+  <br>
+
+  <label>or, create a new Owner:</label>
+  <br>
+  <label>name:</label>
+    <input  type="text" name="owner_name" id="owner_name"></input>
+  <br>
+  <input type="submit" value="Update Pet">
+</form>
