--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -23,7 +23,7 @@
   <label>or, create a new Owner:</label>
   <br>
   <label>name:</label>
-    <input  type="text" name="pet[owner_name]" id="owner_name"></input>
+    <input  type="text" name="owner_name" id="owner_name"></input>
   <br>
   <input type="submit" value="Update Pet">
 </form>
